# JSDLL_microservicios1-25

./: .gitignore  Dockerfile
05-03/bd-api/: app.js  package-lock.json  package.json
05-03/cliente-fibonaci/: app.js
05-03/cliente-sumas/: package-lock.json  package.json
05-03/websockets-demo/: package.json
05-03/websockets-fibonaci/: package.json
05-03/websockets-sumas/: package-lock.json
19-02/: asincronia.js  crear-archivo.js  leerarchivo.js  leerarchivo_async_await.js  leerarchivo_promesa.js  miArchivo.txt  server.js
20-02/mi-proyecto-express/: app.js  app2.js
20-02/pagestatica/: app.js  package-lock.json  package.json
20-02/plantillas/: app.js  package-lock.json  package.json
20-02/ventas/: app.js  db.js
26-02/usuarios-orm/: .env.example  package-lock.json  package.json
ExposicionRust/rust_eventos_api/: .dockerignore  .env.docker  Cargo.toml  docker-compose.yml  init-mongo.js
ExposicionRust/rust_eventos_api/src/: error.rs  main.rs  model.rs
ExposicionRust/rust_eventos_api/src/api/: compra_api.rs  mod.rs
ExposicionRust/rust_eventos_api/src/repository/: mongodb_repo.rs
ExposicionRust/rust_libros_api/: Cargo.toml
ExposicionRust/rust_libros_api/src/: handlers.rs  main.rs  model.rs
ExposicionRust/rust_libros_api/src/api/: mod.rs
ExposicionRust/rust_libros_api/src/repository/: mongodb_repo.rs
PrimerParcial/: docker-compose.yml  index.js  package-lock.json  package.json
PrimerParcial/models/: Book.js
SegundoParcial/: docker-compose.yml  start.sh  stop.sh
TrabajoClaseAPIREST/: package-lock.json  package.json
TrabajoClaseFacturaAPIREST/: docker-compose.yml
TrabajoFinal/: docker-compose.yml  nginx.conf
rust_libros_api/: .dockerignore  Dockerfile  docker-compose.yml
(+189 files in other folders)
