[package]
name = "rust-mongodb-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-web-httpauth = "0.8.0"  # Añadida esta dependencia para autenticación
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
mongodb = { version = "2.5.0", features = ["tokio-runtime"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"