[package]
name = "rust-mongodb-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-web-httpauth = "0.8.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
lapin = "2.5.3"
log = "0.4.17"
mongodb = { version = "2.5.0", features = ["tokio-runtime"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }