[package]
name = "rust-mongodb-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
mongodb = "2.5.0"
bson = { version = "2.6.1", features = ["chrono-0_4"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
thiserror = "1.0.40"